modules/protocol/http/test/variation_http-ref.txt
debug http: selecting http dissector on flow
debug cnx: opening connection 192.168.10.1:33982 -> 192.168.20.1:80
HTTP REQUEST
class HttpRequestResult {
  headers : class HeaderResult {
    Connection : "close"
    Host : "server"
    User-Agent : "telnet v1.0/1 enhanced gold edition"
  }
  method : "GET"
  uri : "/"
  version : "1.1"
  split_cookies : class HttpCookiesSplit {
  }
  split_uri : class HttpUriSplit {
    path : "/"
  }
}
HTTP RESPONSE
class HttpResponseResult {
  headers : class HeaderResult {
    Connection : "close"
    Content-Length : "78"
    Content-Type : "text/html"
    Date : "Fri, 14 Mar 2014 14:31:11 GMT"
    Server : "Apache/2.2.8 (Ubuntu) DAV/2"
    X-Powered-By : "PHP/5.2.4-2ubuntu5.10"
  }
  reason : "OK"
  status : "200"
  version : "1.1"
  split_cookies : class HttpCookiesSplit {
  }
}
debug http: selecting http dissector on flow
debug cnx: opening connection 192.168.10.1:33983 -> 192.168.20.1:80
HTTP REQUEST
class HttpRequestResult {
  headers : class HeaderResult {
    Connection : "close"
    Host : "server"
    User-Agent : "telnet v1.0/1 enhanced gold edition"
  }
  method : "GET"
  uri : "/"
  version : "1.1"
  split_cookies : class HttpCookiesSplit {
  }
  split_uri : class HttpUriSplit {
    path : "/"
  }
}
HTTP RESPONSE
class HttpResponseResult {
  headers : class HeaderResult {
    Connection : "close"
    Content-Length : "78"
    Content-Type : "text/html"
    Date : "Fri, 14 Mar 2014 14:31:11 GMT"
    Server : "Apache/2.2.8 (Ubuntu) DAV/2"
    X-Powered-By : "PHP/5.2.4-2ubuntu5.10"
  }
  reason : "OK"
  status : "200"
  version : "1.1"
  split_cookies : class HttpCookiesSplit {
  }
}
debug http: selecting http dissector on flow
debug cnx: opening connection 192.168.10.1:33984 -> 192.168.20.1:80
debug grammar: parse error at byte 6 for field 1 in version: token /HTTP// doesn't match
debug grammar: parse error context: HTML/1.1\x0aHost: server\x0aConnection: close\x0aUser-Agent: telnet v1.0/1 enhanced gold edition\x0a\x0a...
alert: id = = <>
	severity = low
	description = invalid http version
debug cnx: dropping connection 192.168.10.1:33984 -> 192.168.20.1:80
debug http: selecting http dissector on flow
debug cnx: opening connection 192.168.10.1:33985 -> 192.168.20.1:80
debug grammar: parse error at byte 5 for field 4 in request_line: token /[[:blank:]]+/ doesn't match
debug grammar: parse error context: \x0aHost: server\x0aConnection: close\x0aUser-Agent: telnet v1.0/1 enhanced gold edition\x0a\x0a...
alert: id = = <>
	severity = low
	description = invalid http request_line
debug cnx: dropping connection 192.168.10.1:33985 -> 192.168.20.1:80
debug http: selecting http dissector on flow
debug cnx: opening connection 192.168.10.1:33986 -> 192.168.20.1:80
alert: id = = <>
	severity = low
	description = http: unexpected data from server
debug cnx: dropping connection 192.168.10.1:33986 -> 192.168.20.1:80
debug http: selecting http dissector on flow
debug cnx: opening connection 192.168.10.1:33987 -> 192.168.20.1:80
HTTP REQUEST
class HttpRequestResult {
  headers : class HeaderResult {
    Connection : "close"
    Host : "server"
    User-Agent : "telnet v1.0/1 enhanced gold edition"
  }
  method : "BAD_METHOD"
  uri : "/"
  version : "1.1"
  split_cookies : class HttpCookiesSplit {
  }
  split_uri : class HttpUriSplit {
    path : "/"
  }
}
HTTP RESPONSE
class HttpResponseResult {
  headers : class HeaderResult {
    Connection : "close"
    Content-Length : "78"
    Content-Type : "text/html"
    Date : "Fri, 14 Mar 2014 14:31:11 GMT"
    Server : "Apache/2.2.8 (Ubuntu) DAV/2"
    X-Powered-By : "PHP/5.2.4-2ubuntu5.10"
  }
  reason : "OK"
  status : "200"
  version : "1.1"
  split_cookies : class HttpCookiesSplit {
  }
}
debug http: selecting http dissector on flow
debug cnx: opening connection 192.168.10.1:33988 -> 192.168.20.1:80
HTTP REQUEST
class HttpRequestResult {
  headers : class HeaderResult {
    Connection : "close"
    Host : "server"
    User-Agent : "telnet v1.0/1 enhanced gold edition"
  }
  method : "GET%"
  uri : "/"
  version : "1.1"
  split_cookies : class HttpCookiesSplit {
  }
  split_uri : class HttpUriSplit {
    path : "/"
  }
}
HTTP RESPONSE
class HttpResponseResult {
  headers : class HeaderResult {
    Connection : "close"
    Content-Length : "78"
    Content-Type : "text/html"
    Date : "Fri, 14 Mar 2014 14:31:11 GMT"
    Server : "Apache/2.2.8 (Ubuntu) DAV/2"
    X-Powered-By : "PHP/5.2.4-2ubuntu5.10"
  }
  reason : "OK"
  status : "200"
  version : "1.1"
  split_cookies : class HttpCookiesSplit {
  }
}
debug http: selecting http dissector on flow
debug cnx: opening connection 192.168.10.1:33989 -> 192.168.20.1:80
debug grammar: parse error at byte 1 for field 2 in request_line: token /[[:blank:]]+/ doesn't match
debug grammar: parse error context: (E*T$? / HTTP/1.1\x0aHost: server\x0aConnection: close\x0aUser-Agent: telnet v1.0/1 enhanced gold edition\x0a\x0a...
alert: id = = <>
	severity = low
	description = invalid http request_line
debug cnx: dropping connection 192.168.10.1:33989 -> 192.168.20.1:80
debug http: selecting http dissector on flow
debug cnx: opening connection 192.168.10.1:33990 -> 192.168.20.1:80
debug grammar: parse error at byte 11 for field 2 in version: token /[0-9]+%.[0-9]+/ doesn't match
debug grammar: parse error context: numeric.numeric\x0aHost: server\x0aConnection: close\x0aUser-Agent: telnet v1.0/1 enhanced gold edition\x0a\x0a...
alert: id = = <>
	severity = low
	description = invalid http version
debug cnx: dropping connection 192.168.10.1:33990 -> 192.168.20.1:80
debug cnx: closing connection 192.168.10.1:33990 -> 192.168.20.1:80
debug cnx: closing connection 192.168.10.1:33989 -> 192.168.20.1:80
debug cnx: closing connection 192.168.10.1:33988 -> 192.168.20.1:80
debug cnx: closing connection 192.168.10.1:33987 -> 192.168.20.1:80
debug cnx: closing connection 192.168.10.1:33986 -> 192.168.20.1:80
debug cnx: closing connection 192.168.10.1:33985 -> 192.168.20.1:80
debug cnx: closing connection 192.168.10.1:33984 -> 192.168.20.1:80
debug cnx: closing connection 192.168.10.1:33983 -> 192.168.20.1:80
debug cnx: closing connection 192.168.10.1:33982 -> 192.168.20.1:80
